elements/ne-button/src/ne-button.pcss
button,
[role='button'] {
  /* Border API */
  --buttonBorder: var(--ne-button-border, 0);
  --buttonHoverBorder: var(--ne-button-hover-border, 0);
  --buttonFocusBorder: var(--ne-button-focus-border, 0);
  --buttonActiveBorder: var(--ne-button-active-border, 0);
  --buttonDisabledBorder: var(--ne-button-disabled-border, 0);

  /* Background API */
  --buttonBackground: var(--ne-button-background, hsl(233, 64%, 62%));
  --buttonHoverBackground: var(--ne-button-hover-background, hsl(233, 64%, 52%));
  --buttonFocusBackground: var(--ne-button-focus-background, hsl(233, 64%, 52%));
  --buttonActiveBackground: var(--ne-button-active-background, hsl(233, 64%, 32%));
  --buttonDisabledBackground: var(--ne-button-disabled-background, hsl(220, 10%, 95%));

  /* Foreground API */
  --buttonForeground: var(--ne-button-foreground, #FFF);
  --buttonHoverForeground: var(--ne-button-hover-foreground, #FFF);
  --buttonFocusForeground: var(--ne-button-focus-foreground, #FFF);
  --buttonActiveForeground: var(--ne-button-active-foreground, #FFF);
  --buttonDisabledForeground: var(--ne-button-disabled-foreground, hsl(220, 10%, 60%));

  /* Icon API */
  --buttonIconMargin: var(--ne-button-icon-margin, calc(2rem / 2.2));
  --buttonIconSeparator: var(--ne-button-icon-separator, rgba(255, 255, 255, 0.3));
  --buttonDisabledIconSeparator: var(--ne-button-disabled-icon-separator, rgba(143, 150, 163, 0.3));

  /* Misc API */
  --buttonBorderRadius: var(--ne-button-radius, 5px);
  --buttonFontWeight: var(--ne-button-font-weight, 700);
  --buttonFontSize: var(--ne-button-font-size, inherit);
  --buttonPadding: var(--ne-button-y-padding, 1rem) var(--ne-button-x-padding, 2rem);
  --buttonOutlineColor: var(--ne-button-outline-color, hsl(233, 64%, 82%));
  --buttonShadow: var(--ne-button-shadow, 0 1px 2px rgba(0, 0, 0, 0.16));

  box-sizing: border-box;
  appearance: button;
  user-select: none;
  -webkit-touch-callout: none;
  margin: 0;
  cursor: pointer;
  font-family: inherit;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  line-height: hinerit;
  text-decoration: none;
  outline: none;
  white-space: nowrap;
  border: var(--buttonBorder);
  background: var(--buttonBackground);
  border-radius: var(--buttonBorderRadius);
  font-weight: var(--buttonFontWeight);
  color: var(--buttonForeground);
  padding: var(--buttonPadding);
  font-size: var(--buttonFontSize);
  box-shadow: var(--buttonShadow);

  &:hover {
    border-color: var(--buttonHoverBorder);
    background: var(--buttonHoverBackground);
    color: var(--buttonHoverForeground);
  }

  /* Simulate focus outline with box-shadow */
  &:focus,
  &:active {
    box-shadow: 0 0 0 0.2rem var(--buttonOutlineColor);
  }

  &:focus {
    border: var(--buttonFocusBorder);
    background: var(--buttonFocusBackground);
    color: var(--buttonFocusForeground);
  }

  &:disabled,
  &[aria-disabled] {
    cursor: not-allowed;
    box-shadow: none;
    border: var(--buttonDisabledBorder);
    background: var(--buttonDisabledBackground);
    color: var(--buttonDisabledForeground);
  }

  &:not(:disabled, [aria-disabled]):active {
    transform: translateY(1px);
    border: var(--buttonActiveBorder);
    background: var(--buttonActiveBackground);
    color: var(--buttonActiveForeground);
  }

  & i {
    color: inherit;
    fill: inherit;
    font-style: normal;
    line-height: inherit;
    margin-right: var(--buttonIconMargin);
    padding-right: var(--buttonIconMargin);
    border-right: 1px solid var(--buttonIconSeparator);
  }

  &[ne-icon-right] i {
    margin-right: 0;
    padding-right: 0;
    border-right: 0;
    margin-left: var(--buttonIconMargin);
    padding-left: var(--buttonIconMargin);
    border-left: 1px solid var(--buttonIconSeparator);
  }

  &[disabled] i {
    border-right: 1px solid var(--buttonDisabledIconSeparator);
  }
}

